[tool.poetry]
name = "cardsec"
version = "0.0.5"
description = "System and Security Assesment Tool for Cardano SPOs."
authors = ["Advait Joglekar <advaitjoglekar@yahoo.in>"]
maintainers = ["Advait Joglekar <advaitjoglekar@yahoo.in>"]
license = "MIT"
readme = "README.md"
keywords = ["cardsec","cardano"]

[tool.poetry.scripts]
cardsec = "cardsec.main:app"

[tool.poetry.dependencies]
python = "^3.6"
typer = {extras = ["all"], version = "^0.4.0"}
psutil = "^5.8.0"
distro = "^1.6.0"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.black]
exclude=["./git"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
