[tool.poetry]
name = "cardsec"
version = "0.2.1"
description = "System and Security Assesment Tool for Cardano SPOs."
authors = [
    "Advait Joglekar <advaitjoglekar@yahoo.in>", 
    "Adnan Khan <strangelet.lol@protonmail.ch>"
    ]
maintainers = ["Advait Joglekar <advaitjoglekar@yahoo.in>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/SkryptLabs/Cardsec"
repository = "https://github.com/SkryptLabs/Cardsec"

keywords = ["cardsec","cardano", "SPO"]

[tool.poetry.scripts]
cardsec = "cardsec.main:main"

[tool.poetry.dependencies]
python = "^3.6"
psutil = "^5.8.0"
distro = "^1.6.0"
termcolor = "^1.1.0"
simple-term-menu = "^1.4.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.black]
exclude=["./git"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
